# mage-core

./: Cargo.toml  Justfile  README.md
examples/: basic.rs  hello.rs
src/: app.rs  colour.rs  config.rs  error.rs  image.rs  input.rs  lib.rs  present.rs  render.rs  shader.wgsl
