[package]
name = "mage-core"
version = "0.1.0"
edition = "2021"
authors = ["Baad C0de <baadc0de@proton.me>"]
description = "An ASCII art game engine written in Rust."
license = "MIT"
repository = "https://github.com/baad-c0de/mage-core"
readme = "README.md"
keywords = ["ascii", "gamedev", "engine", "terminal", "roguelike"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.13", features = ["derive"] }
chrono = "0.4"
image = "0.24"
thiserror = "1.0"
tokio = { version = "1.28", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
wgpu = "0.16"
winit = "0.28"
winit-fullscreen = "1.0"

[dev-dependencies]
color-eyre = "0.6"
rand = "0.8"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
